assets/style.css
* {
    box-sizing: border-box;
    font-family: ubuntu;
}

body {
    margin: 0;
    padding: 0;
}

header div.title {
    height: 50px;
    margin: 20px 20px;
    overflow: hidden;
}

header div.title a {
    display: block;
    text-decoration: none;
    font-size: 3em;
    color: black;
}

header nav {
    background-color: seagreen;
}

header nav ul {
    list-style: none;
    display: flex;
    margin: 0;
    padding: 0;
}

header nav ul li {
    display: block;
}

header nav ul:first-child {
    padding-inline-start: 20px;
}

header li a {
    text-decoration: none;
    color: white;
    display: block;
    line-height: 3em;
    padding-inline: 1em;
}

header li a:hover {
    background-color: darkseagreen;
}

